# meow

./: .gitignore  README.md  bp.go  build.sh  fs.go  go.mod  go.sum  log.go  main.go  meson.build  sh.go  shell.go  x86.env  x86.txt
meow.py/: arrgh.py  meow.py
meow/include/meow/: haar_features.h  integral_image.h  model.h  strong_classifier.h  weak_classifier.h
meow/src/: haar_features.asm  haar_features.c  model.asm  weak_classifier.c
meow/tests/: haar_x2.c  haar_y3.c  integral_image.c  meson.build
src/: integral_image.asm  integral_image.c  meson.build  mw.asm  mw.c  strong_classifier.c
sub/: spng.wrap
tests/: haar_x2y2.c  haar_x3.c  haar_y2.c
